# stinoil-esg

./: app.py  chatgpt_export_to_kb.py  pyproject.toml  requirements.txt  vercel.json
ChemieComplianceKennisbank/: AGENTS.md  README.md
ChemieComplianceKennisbank/01_Wetgeving/eu/: aerosolrichtlijn.md  atex_153_114.md  clp_classificatie_etikettering_en_verpakking.md  clp_verordening.md  csrd.md  nis2.md  packaging_and_packaging_waste_regulation.md  ppwr.md  reach_registratie_evaluatie_autorisatie_chemische_stoffen.md  (+2 more)
ChemieComplianceKennisbank/07_Templates/: template_antwoord.md  template_beoordeling.md  template_locatieprofiel.md  template_vraag.md  template_wetgeving.md
ChemieComplianceKennisbank/08_Index/: index_antwoorden.md  index_casus_tijdlijn.md  index_locaties.md  index_themas.md  index_vragen.md  index_wetgeving.md
ChemieComplianceKennisbank/09_Workflows/: codex_queries.md  import_procedure.md
demo/: conversations.json
public/: style.css
tests/: test_chatgpt_export_to_kb.py  test_webapp.py
webapp/: app.py  blob_store.py
webapp/static/: style.css
webapp/templates/: base.html  bootstrap_done.html  casus_nieuw.html  casussen.html  dashboard.html  document_detail.html  dossier.html  error.html  forbidden.html  login.html  review.html  search.html  setup_check.html  stilstanden_dashboard.html  stilstanden_importeer.html  stilstanden_redencodes.html  stilstanden_registreer.html  taxonomie.html  tijdslijn.html  vragen_analyse.html  vragen_uniform_antwoord.html  wetgeving.html  wetgeving_importeer.html  wetgeving_suggesties.html  wetgeving_upload.html
(+50 files in other folders)
