[project]
name = "mcc-esg-compliance-kb"
version = "0.1.0"
description = "Compliance knowledge base Flask app for Vercel"
requires-python = ">=3.9"
dependencies = [
    "Flask>=3.0,<4.0",
    "pypdf>=4.2,<6.0",
    "python-docx>=1.1,<2.0",
    "requests>=2.32,<3.0",
    "psycopg[binary]>=3.2,<4.0",
    "Werkzeug>=3.0,<4.0",
]

[project.scripts]
app = "webapp.app:app"
